@@ -31,5 +31,6 @@
  Date			Author			Description
  2019 Oct 18	wkitty42		initial development
  2019 Oct 21	wkitty42		put initial version into git repo for change tracking
+ 2020 Mar  3	wkitty42		added * in first column to id unknown areas
 
 //-- EoF --
